# bitmap2svg

./: README.md
.github/workflows/: png-to-svg.yml
bitmap2svg/: Makefile  README.md  pyproject.toml
bitmap2svg/bitmap2svg/: __init__.py  bezier.py  bwtrace_cv2.py  bwtrace_potrace.py  cli.py  config.py  ingest.py  llm_clerk.py  ocr_text.py  pipeline.py  qa.py  segment.py  service.py  simplify.py  svg_io.py  swarm.py  vector_critic.py
bitmap2svg/bitmap2svg/workers/: __init__.py  cache.py  watcher.py
bitmap2svg/tests/: test_cli_batch.py  test_pipeline_perf.py  test_smoke.py  test_swarm.py  test_vector_critic.py
bitmap2svg/tests/assets/: README.md  fixtures  # small test fixtures (do not include image files here)
